// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the correct links when user is authenticated 1`] = `
<header
  className="header header-5"
>
  <div
    className="branding"
  >
    <Connect(NavLink)
      brand={true}
      linkRoute="/"
    />
  </div>
  <div
    className="header-nav"
  >
    <Connect(NavLink)
      key="1"
      linkRoute="/user-profile"
      linkText="User Profile"
    />
    <Connect(NavLink)
      key="2"
      linkRoute="/sign-out"
      linkText="Sign Out"
    />
  </div>
</header>
`;

exports[`Header renders the correct links when user is not authenticated 1`] = `
<header
  className="header header-5"
>
  <div
    className="branding"
  >
    <Connect(NavLink)
      brand={true}
      linkRoute="/"
    />
  </div>
  <div
    className="header-nav"
  >
    <Connect(NavLink)
      key="1"
      linkRoute="/sign-in"
      linkText="Sign In"
    />
    <Connect(NavLink)
      key="2"
      linkRoute="/sign-up"
      linkText="Sign Up"
    />
  </div>
</header>
`;
